Mon Nov 09 03:05:05 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Turn off debugging print.

Mon Nov 09 03:04:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager/generic.py: Turn off debugging print.

Mon Nov 09 01:58:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/perftest/harness.py: Fix some bugs in the timers.

Sun Nov 08 11:27:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/cached_searches.py: Update test for new search
	  interface.

Sun Nov 08 11:21:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Implement query_cached() to return a
	  query which returns the cached items for a given queryid, instead
	  of the additional cached_query_str() parameter to search() - much
	  more flexible.

Sun Nov 08 11:20:27 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager/__init__.py,xappy/cachemanager/xapian_manager.py:
	  Add CacheManager implementation which uses a secondary Xapian
	  database to perform the inversion.

Sun Nov 08 11:17:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/perftest/cachemanager.py,xappy/perftest/harness.py: Add
	  performance test harness, and a test for the cachemanager
	  performance.

Sun Nov 08 11:09:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Update to pass the docids as well as
	  the rank estimates to the cache.

Sun Nov 08 11:07:14 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager/generic.py: Pull out the preparations for
	  iter_by_docid to a separate method, and fix remove_hits to allow
	  the supplied ranks to be mis-estimates.

Sun Nov 08 11:06:15 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/cachemanager.py: Extend test to check what
	  happens when the supplied ranks are over estimates.
