@@ -1,3 +1,8 @@
+Mon Nov 09 03:05:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/perftest/cachemanager.py: Performance test which includes
+	  search tests, and is more careful with some of the other tests.
+
 Mon Nov 09 03:05:05 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/indexerconnection.py: Turn off debugging print.
